Refactor net.sf -> io.github